fix:解决position：sticky因与overflow-x:hidden冲突不生效的问题 yamazakura 今天 20:58

--- a/src/assets/css/gacha.css
+++ b/src/assets/css/gacha.css
@@ -1,5 +1,4 @@
 #gacha {
-    overflow: hidden;
     margin: auto;
     padding: 0 12px;
     transform-style: preserve-3d;
